math-core/src/snapshots/math_core__tests__overbrace.snap
---
source: math-core/src/lib.rs
expression: "\\overbrace{a+b+c}^{d}"
---
<math>
    <mover>
        <mover>
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
                <mo>+</mo>
                <mi>c</mi>
            </mrow>
            <mo>⏞</mo>
        </mover>
        <mi>d</mi>
    </mover>
</math>
