math-core/src/snapshots/math_core__tests__overset_plus.snap
---
source: math-core/src/lib.rs
expression: "\\overset{!}{+}"
---
<math>
    <mover>
        <mo>+</mo>
        <mo>!</mo>
    </mover>
</math>
