math-core/src/snapshots/math_core__tests__overset_prime.snap
---
source: math-core/src/lib.rs
expression: "\\overset{'}{=}"
---
<math>
    <mover>
        <mo lspace="0">=</mo>
        <msup>
            <mrow>
            </mrow>
            <mo>′</mo>
        </msup>
    </mover>
</math>
