math-core/src/snapshots/math_core__tests__overset_real_prime.snap
---
source: math-core/src/lib.rs
expression: "\\overset{\\prime}{=}x"
---
<math>
    <mover>
        <mo lspace="0">=</mo>
        <mo>′</mo>
    </mover>
    <mi>x</mi>
</math>
