math-core/src/snapshots/math_core__tests__overset_spacing.snap
---
source: math-core/src/lib.rs
expression: "x\\overset{!}{=}x"
---
<math>
    <mi>x</mi>
    <mover>
        <mo>=</mo>
        <mo>!</mo>
    </mover>
    <mi>x</mi>
</math>
