math-core/src/snapshots/math_core__tests__overset_with_prime.snap
---
source: math-core/src/lib.rs
expression: "\\overset{!}{=}'"
---
<math>
    <msup>
        <mover>
            <mo lspace="0" rspace="0">=</mo>
            <mo>!</mo>
        </mover>
        <mo>′</mo>
    </msup>
</math>
