math-core/src/snapshots/math_core__tests__plus_after_closing_paren.snap
---
source: math-core/src/lib.rs
expression: (x)+x
---
<math>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
    <mo>+</mo>
    <mi>x</mi>
</math>
