math-core/src/snapshots/math_core__tests__plus_after_equal.snap
---
source: math-core/src/lib.rs
expression: x = +4
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mo form="prefix">+</mo>
    <mn>4</mn>
</math>
