math-core/src/snapshots/math_core__tests__plus_after_equal_subscript.snap
---
source: math-core/src/lib.rs
expression: x =_+4
---
<math>
    <mi>x</mi>
    <msub>
        <mo>=</mo>
        <mo>+</mo>
    </msub>
    <mn>4</mn>
</math>
