math-core/src/snapshots/math_core__tests__plus_after_equal_subscript2.snap
---
source: math-core/src/lib.rs
expression: x =_2 +4
---
<math>
    <mi>x</mi>
    <msub>
        <mo>=</mo>
        <mn>2</mn>
    </msub>
    <mo form="prefix">+</mo>
    <mn>4</mn>
</math>
